[package]
name = "octo-api"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde_json = { version = "1.0.140" }
tokio = { version="1.43.0", features = ["full"] }
base64 = {  version = "0.22.1" }
polars = { version="0.46.0", features = ["polars-io", "json", "parquet"] }
